--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -9,6 +9,9 @@
 </div>
 
 <div>
+	<h3>Add a new note</h3>
+</div>
+<div class="form">
 	<%= form_for([@book, @book.notes.new]) do |f| %>
 	<div class="field">
 		<%= f.label :title %><br>
@@ -18,7 +21,7 @@
 		<%= f.label :note %><br>
 		<%= f.text_area :note %>
 	</div>
-	<div class="actions">
+	<div class="btn">
 		<%= f.submit "Add new note" %>
 	</div>
   <% end %>
