--- a/app/views/notes/_note.html.erb
+++ b/app/views/notes/_note.html.erb
@@ -3,5 +3,5 @@
 		<%= content_tag :span, "#{note.title} (#{time_ago_in_words note.created_at} ago)", class: "note-title" %>
 		<%= link_to "Delete Note", [@book, note], method: :delete %>
 	</div>
-	<div class="container"><%= simple_format note.note %></div>
+	<div class="note"><%= simple_format note.note %></div>
 </div>
