scss update buttons and colour

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -22,7 +22,7 @@
 		<%= f.text_area :note %>
 	</div>
 	<div class="btn">
-		<%= f.submit "Add new note" %>
+		<%= f.submit "Add a new note" %>
 	</div>
   <% end %>
 </div>
