--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -2,6 +2,17 @@
 @import "bootstrap";
  * {
  	font-family: Raleway;
+  color: white;
+ }
+
+ .navbar {
+  background-color: #427181;
+  border-bottom: 5px solid #814271;
+  color: white;
+ }
+ .nav-links a {
+  color: white !important;
+  padding-left: 38px !important; 
  }
  body {
 	padding: 50px;
@@ -25,7 +36,7 @@
 }
 h1, h2, h3, p, a {
   color: white;
-
+  padding: 30px 0px;
 }
 h3 {
   margin-top: 40px;
@@ -34,14 +45,28 @@ h3 {
 table {
   color: white;
   margin-right: 30px;
-  background-color: rgba(0,0,0,0.3);
   padding: 5px;
+  border: 1px solid rgba(0,0,0,1);
+}
+.odd {
+  background-color: rgba(10,10,10,0.5);
+}
+.even {
+  background-color: rgba(0,0,0,0.3);
 }
 
-td {
-  margin: 5px;
+td, th {
+  border: 1px solid rgba(0,0,0,1);
+  padding: 20px;
+}
+#borderless {
+  border: none;
 }
 
+/*##################   Show ################*/
+.book {
+  text-align: center;
+}
 .note-title {
 	font-weight: bold;
   
@@ -81,5 +106,67 @@ form {
 }
 
 .btn {
+  
+}
+
+.my-btn {
+  background-color: rgba(255,255,255,0.3) !important;
+  text-align: center !important;
+  text-decoration: none !important;
+  display: inline-block !important;
+  color: #524281 !important;
+  
+  width: 15% !important;
+  padding: 5px !important;  
+  
+  border-radius: 3px !important;
+  font-size: 20px !important;
+  &:hover {
+    background-color: #524281 !important;
+    color: white !important;
+    text-decoration: none !important;
+  }
+}
+.btn input[type="submit"] {
+  background-color: rgba(255,255,255,0.3) !important;
+  text-align: center !important;
+  text-decoration: none !important;
+  display: inline-block !important;
+  color: #524281 !important;
+  
+  width: 200px !important;
+  padding: 5px !important;  
+  margin-left: -13px;
   margin: 20px, 0px;
+  
+  border-radius: 3px !important;
+  font-size: 20px !important;
+  &:hover {
+    background-color: #524281 !important;
+    color: white !important;
+    text-decoration: none !important;
+  }
+}
+
+.actions input[type="submit"] {
+  background-color: rgba(255,255,255,0.3) !important;
+  text-align: center !important;
+  text-decoration: none !important;
+  display: inline-block !important;
+  color: #524281 !important;
+  
+  width: 200px !important;
+  padding: 5px !important;  
+  margin: 20px, 0px !important;
+  
+  border-radius: 3px !important;
+  font-size: 20px !important;
+  &:hover {
+    background-color: #524281 !important;
+    color: white !important;
+    text-decoration: none !important;
+  }
+}
+.actions {
+  margin: 20px 0px;
 }
