--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,19 +1,19 @@
 
 
-<h1>Listing Books</h1>
+<h1>Listing of Books</h1>
 
 <table>
   <thead>
     <tr>
       <th>Name</th>
       <th>Author</th>
-      <th colspan="3"></th>
+      <th id="borderless" colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @books.each do |book| %>
-      <tr>
+      <tr class=<%= cycle('even', 'odd') %>> <!-- don't forget the '>' at the end-->
         <td><%= book.name %></td>
         <td><%= book.author %></td>
         <td><%= link_to 'Show', book %></td>
@@ -26,4 +26,4 @@
 
 <br>
 
-<%= link_to 'New Book', new_book_path %>
+<%= link_to 'New Book', new_book_path, class:"my-btn" %>
