--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -76,7 +76,7 @@ td, th {
 	margin: 10px;
   padding: 5px;
 	border-radius: 5px;
-	background-color: #696969;
+	background-color: rgba(105,105,105,0.7);
 	width: 40%;
 }
 
