--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <div class="book">
 	<%= content_tag :span, "#{@book.name} (#{@book.author})", class: "book-title" %>
 	<%= link_to 'Edit', edit_book_path(@book) %>
@@ -28,3 +29,4 @@
 </div>
 
 <%= link_to 'Back', books_path %>
+</div>
