--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,4 @@
-
+<div class="container">
 
 <h1>Listing of Books</h1>
 
@@ -27,3 +27,4 @@
 <br>
 
 <%= link_to 'New Book', new_book_path, class:"my-btn" %>
+</div>
